# rust-simpl-db

./: .gitignore  Cargo.toml  Makefile  README.md  create  delete  fuck.sorted  gendata  insert  obs.sorted  ohno.sorted  select  stats  table.sorted  test.sh
reference/: gendata.c  page.c  query.c  reln.c  reln.h  tuple.c
src/: choice_vec.rs  lib.rs  ma_hash.rs  page.rs  partial_hash.rs  query.rs  relation.rs  tuple.rs  util.rs
tests/: lib.rs
